Fix : UI solve widget panel hight on small screens

--- a/shinken/webui/plugins/dashboard/htdocs/css/jquery.pageslide.css
+++ b/shinken/webui/plugins/dashboard/htdocs/css/jquery.pageslide.css
@@ -2,7 +2,7 @@
     /* These styles MUST be included. Do not change. */
     display: none;
     position: absolute;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     height: 100%;
     z-index: 999999;
